src/main/java/com/example/outsourcingproject/exception/invalidtransition/InvalidPendingTransitionException.java
package com.example.outsourcingproject.exception.invalidtransition;

import com.example.outsourcingproject.exception.ErrorCode;

public class InvalidPendingTransitionException extends InvalidTransitionException {

    public InvalidPendingTransitionException() {
        super(ErrorCode.INVALID_PENDING_TRANSITION);
    }
}